--- a/index.html
+++ b/index.html
@@ -4,129 +4,137 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>contest2</title>
 </head>
 <body>
-    <header>
-        <nav class="nav-bar">
-            <h1>EMPLOYEE DASHBOARD</h1>
-        </nav>
-    </header>
-
-    <main class="main-flex">
+    <div class="box">
+        <div class="box1">
+        <span>EMPLOYEE DASHBOARD</span>
+        </div>
+    </div>
+    <div class="container">
         <div class="left-flex">
-            <div class="child1 child-flex">
-                <div class="container">
-                    <p>Yaswanth Reddy</p>
-                <img src="./assets/handsome-young-man-with-new-stylish-haircut.jpg" alt="" class="profile">
+          <div class="m1">
+            <div class="m11">
+                <img class="img" src="assets/handsome-young-man-with-new-stylish-haircut.jpg" alt="image"> 
             </div>
-            
+            <div class="m11">
+                <span>john stark</span>
             </div>
-            <div class="child2 child-flex">
-                <ul class="child2-ul">
-                    <li>NAME : YASWANTH REDDY</li>
-                    <li>USERNAME : YASH27000</li>
-                    <li>EMAIL : YASWANTHREDDYBOGGALA@GMAIL.COM</li>
-                    <li>AGE : 22 YEARS</li>
-                    <li>GENDER : MALE</li>
-                    <li>LOCATION : NEW DELHI, INDIA</li>
-                </ul>
-            </div>
-            <div class="child3 child-flex ">
-                <h3>LINKS</h3>
-                <ul class="links">
-                   <li class="list-2"><a href=""><img src="./assets/mail 1.svg" alt=""> EMAIL</a></li>
-                   <li class="list-2"><a href=""><img src="./assets/Vector.png" alt="" class="face"> FACEBOOK</a></li>
-                   <li class="list-2 "><a href=""><img src="./assets/instagram 1.svg" alt="" > INSTAGRAM</a></li>
-                   <li class="list-2"><a href=""><img src="./assets/Vector (2).svg" alt=""> </a>GITHUB</li>
-                </ul>
-            </div>
+          </div>
+          <div class="m2">
+            <ul>
+                <li>NAME: JOHN STARK</li>
+                <li>USERNAME: JOHNSTARK29</li>
+                <li>EMAIL: JOHNSTARK@OFFICE.COM</li>
+                <li>AGE: 18 YEARS</li>
+                <li>GENDER: MALE</li>
+                <li>LOCATION: NEW DELHI,INDIA</li>
+            </ul>
+          </div>
+          <div class="m3">
+            <div class="icon">
+                  <h4>LINKS</h4>
+                  <a href="#"><i class="fa fa-envelope-o"></i>  email</a><br>
+                  <a href="#"><i class="fa fa-facebook-square"></i> facebook</a><br>
+                  <a href="#"><i class="fa fa-instagram"></i> instagram</a><br>
+                  <a href="#"><i class="fa fa-github"></i> github</a><br>
+                  </div>
+          </div>
         </div>
         <div class="right-flex">
-            <h2 class="responsive">Tasks Given To Employee</h2>
-            <div class="table-wrapper">
-            <table>
-                <thead>
-                    <th>ID</th>
-                    <th>Status</th>
-                    <th class="th-3">Task</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>8</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>9</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>11</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>13</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                    <tr>
-                        <td>14</td>
-                        <td><input type="checkbox" name="" id=""></td>
-                        <td>Task 1 - loreum ipsum</td>
-                    </tr>
-                </tbody>
-            </table>
+                <div class="table-heading">Tasks Given To Employee</div>
+                <div class="table-wrapper">
+                <div class="table">
+                    <table>
+                        <thead>
+                            <th>ID</th>
+                            <th>STATUS</th>
+                            <th class="B1">TASK</th>
+                        </thead>
+                        <tr>
+                            <td>1</td>
+                            <td><input type="checkbox" id="check"><label for="check"></label></td>
+                            <td class="B">TASK 1 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td><input type="checkbox" id="check1"><label for="check1"></label></td>
+                            <td class="B">TASK 2 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td><input type="checkbox" id="check2"><label for="check2"></label></td>
+                            <td class="B">TASK 3 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td><input type="checkbox" id="check3"><label for="check3"></label></td>
+                            <td class="B">TASK 4 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td><input type="checkbox" id="check4"><label for="check4"></label></td>
+                            <td class="B">TASK 5 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td><input type="checkbox" id="check5"><label for="check5"></label></td>
+                            <td class="B">TASK 6 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>7</td>
+                            <td><input type="checkbox" id="check6"><label for="check6"></label></td>
+                            <td class="B">TASK 7 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>8</td>
+                            <td><input type="checkbox" id="check7"><label for="check7"></label></td>
+                            <td class="B">TASK 8 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td><input type="checkbox" id="check8"><label for="check8"></label></td>
+                            <td class="B">TASK 9 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>10</td>
+                            <td><input type="checkbox" id="check9"><label for="check9"></label></td>
+                            <td class="B">TASK 10 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>11</td>
+                            <td><input type="checkbox" id="check10"><label for="check10"></label></td>
+                            <td class="B">TASK 11 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>12</td>
+                            <td><input type="checkbox" id="check11"><label for="check11"></label></td>
+                            <td class="B">TASK 12 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>13</td>
+                            <td><input type="checkbox" id="check12"><label for="check12"></label></td>
+                            <td class="B">TASK 13 - LOREM IPSUM</td>
+                        </tr>
+                        <tr>
+                            <td>14</td>
+                            <td><input type="checkbox" id="check13"><label for="check13"></label></td>
+                            <td class="B">TASK 14 - LOREM IPSUM</td>
+                        </tr>
+                    </table>
+                </div>
+                </div>
+            </div>
         </div>
+    </div>
         </div>
-    </main>
+   
+
+
+  
 </body>
 </html>
